--- a/replication_test.ipynb
+++ b/replication_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,73 +20,448 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9f/pxm614n1557f1snrw150gf9r0000gn/T/ipykernel_92136/2679269293.py:2: DtypeWarning: Columns (13,15,16,18,32,34,36,37,41,45,46,55,71,83,84,86,87,90,91,92,96,98,100,101,103,104,105,106,107,108,109) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  new_data = pd.read_csv(\"paper_replication_data/MichiganConsumerSurvey.csv\")\n"
+      "/var/folders/9f/pxm614n1557f1snrw150gf9r0000gn/T/ipykernel_92477/1323896954.py:2: DtypeWarning: Columns (13,15,16,18,32,34,36,37,41,45,46,55,71,83,84,86,87,90,91,92,96,98,100,101,103,104,105,106,107,108,109) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  new_data = pd.read_csv(\"../paper_replication_data/MichiganConsumerSurvey.csv\")\n"
      ]
     }
    ],
    "source": [
     "# Load in New Data\n",
-    "new_data = pd.read_csv(\"paper_replication_data/MichiganConsumerSurvey.csv\")\n"
+    "new_data = pd.read_csv(\"../paper_replication_data/MichiganConsumerSurvey.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['CASEID', 'YYYYMM', 'YYYYQ', 'YYYY', 'ID', 'IDPREV', 'DATEPR', 'ICS',\n",
-       "       'ICC', 'ICE',\n",
-       "       ...\n",
-       "       'GAS1PX1', 'GAS1PX2', 'GAS1', 'PINC', 'PINC2', 'PJOB', 'PSSA', 'PCRY',\n",
-       "       'PSTK', 'WT'],\n",
-       "      dtype='object', length=111)"
+       "['caseid',\n",
+       " 'yyyymm',\n",
+       " 'yyyyq',\n",
+       " 'yyyy',\n",
+       " 'id',\n",
+       " 'idprev',\n",
+       " 'datepr',\n",
+       " 'ics',\n",
+       " 'icc',\n",
+       " 'ice',\n",
+       " 'pago',\n",
+       " 'pagor1',\n",
+       " 'pagor2',\n",
+       " 'pago5',\n",
+       " 'pexp',\n",
+       " 'pexp5',\n",
+       " 'inexq1',\n",
+       " 'inexq2',\n",
+       " 'inex',\n",
+       " 'rinc',\n",
+       " 'bago',\n",
+       " 'bexp',\n",
+       " 'bus12',\n",
+       " 'bus5',\n",
+       " 'news1',\n",
+       " 'news2',\n",
+       " 'unemp',\n",
+       " 'govt',\n",
+       " 'ratex',\n",
+       " 'px1q1',\n",
+       " 'px1q2',\n",
+       " 'px1',\n",
+       " 'px5q1',\n",
+       " 'px5q2',\n",
+       " 'px5',\n",
+       " 'dur',\n",
+       " 'durrn1',\n",
+       " 'durrn2',\n",
+       " 'hom',\n",
+       " 'homrn1',\n",
+       " 'homrn2',\n",
+       " 'shom',\n",
+       " 'shomrn1',\n",
+       " 'shomrn2',\n",
+       " 'car',\n",
+       " 'carrn1',\n",
+       " 'carrn2',\n",
+       " 'income',\n",
+       " 'incqfm',\n",
+       " 'ytl10',\n",
+       " 'ytl90',\n",
+       " 'ytl50',\n",
+       " 'ytl5',\n",
+       " 'ytl4',\n",
+       " 'ytl3',\n",
+       " 'homeown',\n",
+       " 'homeamt',\n",
+       " 'homeqfm',\n",
+       " 'htl10',\n",
+       " 'htl90',\n",
+       " 'htl50',\n",
+       " 'htl5',\n",
+       " 'htl4',\n",
+       " 'htl3',\n",
+       " 'homeval',\n",
+       " 'hompx1q1',\n",
+       " 'hompx1q2',\n",
+       " 'hompx1',\n",
+       " 'hompx5q1',\n",
+       " 'hompx5q2',\n",
+       " 'hompx5',\n",
+       " 'invest',\n",
+       " 'invamt',\n",
+       " 'invqfm',\n",
+       " 'stl10',\n",
+       " 'stl90',\n",
+       " 'stl50',\n",
+       " 'stl5',\n",
+       " 'stl4',\n",
+       " 'stl3',\n",
+       " 'age',\n",
+       " 'birthm',\n",
+       " 'birthy',\n",
+       " 'region',\n",
+       " 'sex',\n",
+       " 'marry',\n",
+       " 'numkid',\n",
+       " 'numadt',\n",
+       " 'educ',\n",
+       " 'eclgrd',\n",
+       " 'ehsgrd',\n",
+       " 'egrade',\n",
+       " 'polaff',\n",
+       " 'polrep',\n",
+       " 'poldem',\n",
+       " 'polcrd',\n",
+       " 'vehown',\n",
+       " 'vehnum',\n",
+       " 'gaspx1',\n",
+       " 'gaspx2',\n",
+       " 'gas5',\n",
+       " 'gas1px1',\n",
+       " 'gas1px2',\n",
+       " 'gas1',\n",
+       " 'pinc',\n",
+       " 'pinc2',\n",
+       " 'pjob',\n",
+       " 'pssa',\n",
+       " 'pcry',\n",
+       " 'pstk',\n",
+       " 'wt']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_data.columns"
+    "new_cols = new_data.columns.to_list()\n",
+    "new_cols = [x.lower() for x in new_cols]\n",
+    "new_cols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['caseid', 'yyyymm', 'yyyyq', 'yyyy', 'id', 'idprev', 'datepr', 'ics',\n",
-       "       'icc', 'ice',\n",
-       "       ...\n",
-       "       'PX1MEAN', 'PX1STD', 'GOOD', 'DURRN1', 'CARRN1', 'HOMRN1', 'INFLFORW',\n",
-       "       'SPF', 'OUTSIDE', 'GOOD2'],\n",
-       "      dtype='object', length=171)"
+       "['caseid',\n",
+       " 'yyyymm',\n",
+       " 'yyyyq',\n",
+       " 'yyyy',\n",
+       " 'id',\n",
+       " 'idprev',\n",
+       " 'datepr',\n",
+       " 'ics',\n",
+       " 'icc',\n",
+       " 'ice',\n",
+       " 'pago',\n",
+       " 'pagor1',\n",
+       " 'pagor2',\n",
+       " 'pexp',\n",
+       " 'inexq1',\n",
+       " 'inexq2',\n",
+       " 'inex',\n",
+       " 'rinc',\n",
+       " 'bago',\n",
+       " 'bexp',\n",
+       " 'bus12',\n",
+       " 'bus5',\n",
+       " 'news1',\n",
+       " 'news2',\n",
+       " 'unemp',\n",
+       " 'govt',\n",
+       " 'ratex',\n",
+       " 'px1q1',\n",
+       " 'px1q2',\n",
+       " 'px1',\n",
+       " 'px5q1',\n",
+       " 'px5q2',\n",
+       " 'px5',\n",
+       " 'dur',\n",
+       " 'durrn1',\n",
+       " 'durrn2',\n",
+       " 'hom',\n",
+       " 'homrn1',\n",
+       " 'homrn2',\n",
+       " 'shom',\n",
+       " 'shomrn1',\n",
+       " 'shomrn2',\n",
+       " 'car',\n",
+       " 'carrn1',\n",
+       " 'carrn2',\n",
+       " 'income',\n",
+       " 'incqfm',\n",
+       " 'ytl10',\n",
+       " 'ytl90',\n",
+       " 'ytl50',\n",
+       " 'ytl5',\n",
+       " 'ytl4',\n",
+       " 'ytl3',\n",
+       " 'homeown',\n",
+       " 'homeval',\n",
+       " 'homeamt',\n",
+       " 'homeqfm',\n",
+       " 'invest',\n",
+       " 'invamt',\n",
+       " 'invqfm',\n",
+       " 'age',\n",
+       " 'birthm',\n",
+       " 'birthy',\n",
+       " 'region',\n",
+       " 'sex',\n",
+       " 'marry',\n",
+       " 'numkid',\n",
+       " 'numadt',\n",
+       " 'race',\n",
+       " 'educ',\n",
+       " 'eclgrd',\n",
+       " 'ehsgrd',\n",
+       " 'egrade',\n",
+       " 'vehown',\n",
+       " 'vehnum',\n",
+       " 'gaspx1',\n",
+       " 'gaspx2',\n",
+       " 'gas5',\n",
+       " 'gas1px1',\n",
+       " 'gas1px2',\n",
+       " 'gas1',\n",
+       " 'wt',\n",
+       " 'ffr',\n",
+       " 'inflation',\n",
+       " 'unrate',\n",
+       " 'cpi',\n",
+       " 'shiller',\n",
+       " 'mortg',\n",
+       " 'pago',\n",
+       " 'pexp',\n",
+       " 'inexq1',\n",
+       " 'inex',\n",
+       " 'rinc',\n",
+       " 'bago',\n",
+       " 'bexp',\n",
+       " 'bus12',\n",
+       " 'bus5',\n",
+       " 'unemp',\n",
+       " 'govt',\n",
+       " 'ratex',\n",
+       " 'px1',\n",
+       " 'px5',\n",
+       " 'dur',\n",
+       " 'hom',\n",
+       " 'shom',\n",
+       " 'car',\n",
+       " 'income',\n",
+       " 'homeown',\n",
+       " 'homeval',\n",
+       " 'age',\n",
+       " 'birthy',\n",
+       " 'west',\n",
+       " 'northeast',\n",
+       " 'south',\n",
+       " 'sex',\n",
+       " 'marry',\n",
+       " 'numkid',\n",
+       " 'numadt',\n",
+       " 'famsize',\n",
+       " 'african',\n",
+       " 'hispanic',\n",
+       " 'native',\n",
+       " 'asian',\n",
+       " 'eclgrd',\n",
+       " 'vehown',\n",
+       " 'vehnum',\n",
+       " 'gaspx1',\n",
+       " 'gas5',\n",
+       " 'gas1px1',\n",
+       " 'gas1',\n",
+       " 'zlb',\n",
+       " 'cpidurables',\n",
+       " 'mm',\n",
+       " 'bus12ag',\n",
+       " 'px1disp',\n",
+       " 'vxo',\n",
+       " 'inflvola',\n",
+       " 'first',\n",
+       " 'second',\n",
+       " 'single',\n",
+       " 'carloan',\n",
+       " 'hompx1q1',\n",
+       " 'hompx1q2',\n",
+       " 'hompx1',\n",
+       " 'hompx5q1',\n",
+       " 'hompx5q2',\n",
+       " 'hompx5',\n",
+       " 'pjob',\n",
+       " 'pssa',\n",
+       " 'pinc',\n",
+       " 'pcry',\n",
+       " 'pinc2',\n",
+       " 'pstk',\n",
+       " 'pinc',\n",
+       " 'pjob',\n",
+       " 'inflqrtl',\n",
+       " 'px1lag',\n",
+       " 'dpx1',\n",
+       " 'durlag',\n",
+       " 'ddur',\n",
+       " 'px1bar',\n",
+       " 'px1mean',\n",
+       " 'px1std',\n",
+       " 'good',\n",
+       " 'durrn1',\n",
+       " 'carrn1',\n",
+       " 'homrn1',\n",
+       " 'inflforw',\n",
+       " 'spf',\n",
+       " 'outside',\n",
+       " 'good2']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load in old data\n",
-    "old_data = pd.read_csv(\"paper_replication_data/replication/replication_data.csv\")\n",
-    "old_data.columns"
+    "old_data = pd.read_csv(\"../paper_replication_data/replication/replication_data.csv\")\n",
+    "old_cols = old_data.columns.to_list()\n",
+    "old_cols = [x.lower() for x in old_cols]\n",
+    "old_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pago5',\n",
+       " 'pexp5',\n",
+       " 'htl10',\n",
+       " 'htl90',\n",
+       " 'htl50',\n",
+       " 'htl5',\n",
+       " 'htl4',\n",
+       " 'htl3',\n",
+       " 'stl10',\n",
+       " 'stl90',\n",
+       " 'stl50',\n",
+       " 'stl5',\n",
+       " 'stl4',\n",
+       " 'stl3',\n",
+       " 'polaff',\n",
+       " 'polrep',\n",
+       " 'poldem',\n",
+       " 'polcrd']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Which variables are in \"new\" data but not \"old\"?\n",
+    "s = set(old_cols)\n",
+    "not_in_old = [x for x in new_cols if x not in s]\n",
+    "not_in_old # 25 entries? That doesn't make sense\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['race',\n",
+       " 'ffr',\n",
+       " 'inflation',\n",
+       " 'unrate',\n",
+       " 'cpi',\n",
+       " 'shiller',\n",
+       " 'mortg',\n",
+       " 'west',\n",
+       " 'northeast',\n",
+       " 'south',\n",
+       " 'famsize',\n",
+       " 'african',\n",
+       " 'hispanic',\n",
+       " 'native',\n",
+       " 'asian',\n",
+       " 'zlb',\n",
+       " 'cpidurables',\n",
+       " 'mm',\n",
+       " 'bus12ag',\n",
+       " 'px1disp',\n",
+       " 'vxo',\n",
+       " 'inflvola',\n",
+       " 'first',\n",
+       " 'second',\n",
+       " 'single',\n",
+       " 'carloan',\n",
+       " 'inflqrtl',\n",
+       " 'px1lag',\n",
+       " 'dpx1',\n",
+       " 'durlag',\n",
+       " 'ddur',\n",
+       " 'px1bar',\n",
+       " 'px1mean',\n",
+       " 'px1std',\n",
+       " 'good',\n",
+       " 'inflforw',\n",
+       " 'spf',\n",
+       " 'outside',\n",
+       " 'good2']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Which variables are in \"old\" data but not \"new\"?\n",
+    "s2 = set(new_cols)\n",
+    "not_in_new = [x for x in old_cols if x not in s2]\n",
+    "not_in_new # 39 entries? "
    ]
   }
  ],
