Added variable spreadsheet

--- a/replication_test.ipynb
+++ b/replication_test.ipynb
@@ -365,103 +365,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['pago5',\n",
-       " 'pexp5',\n",
-       " 'htl10',\n",
-       " 'htl90',\n",
-       " 'htl50',\n",
-       " 'htl5',\n",
-       " 'htl4',\n",
-       " 'htl3',\n",
-       " 'stl10',\n",
-       " 'stl90',\n",
-       " 'stl50',\n",
-       " 'stl5',\n",
-       " 'stl4',\n",
-       " 'stl3',\n",
-       " 'polaff',\n",
-       " 'polrep',\n",
-       " 'poldem',\n",
-       " 'polcrd']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['pago5', 'pexp5', 'htl10', 'htl90', 'htl50', 'htl5', 'htl4', 'htl3', 'stl10', 'stl90', 'stl50', 'stl5', 'stl4', 'stl3', 'polaff', 'polrep', 'poldem', 'polcrd']\n"
+     ]
     }
    ],
    "source": [
     "# Which variables are in \"new\" data but not \"old\"?\n",
     "s = set(old_cols)\n",
     "not_in_old = [x for x in new_cols if x not in s]\n",
-    "not_in_old # 25 entries? That doesn't make sense\n"
+    "print(not_in_old) # 25 entries? That doesn't make sense\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['race',\n",
-       " 'ffr',\n",
-       " 'inflation',\n",
-       " 'unrate',\n",
-       " 'cpi',\n",
-       " 'shiller',\n",
-       " 'mortg',\n",
-       " 'west',\n",
-       " 'northeast',\n",
-       " 'south',\n",
-       " 'famsize',\n",
-       " 'african',\n",
-       " 'hispanic',\n",
-       " 'native',\n",
-       " 'asian',\n",
-       " 'zlb',\n",
-       " 'cpidurables',\n",
-       " 'mm',\n",
-       " 'bus12ag',\n",
-       " 'px1disp',\n",
-       " 'vxo',\n",
-       " 'inflvola',\n",
-       " 'first',\n",
-       " 'second',\n",
-       " 'single',\n",
-       " 'carloan',\n",
-       " 'inflqrtl',\n",
-       " 'px1lag',\n",
-       " 'dpx1',\n",
-       " 'durlag',\n",
-       " 'ddur',\n",
-       " 'px1bar',\n",
-       " 'px1mean',\n",
-       " 'px1std',\n",
-       " 'good',\n",
-       " 'inflforw',\n",
-       " 'spf',\n",
-       " 'outside',\n",
-       " 'good2']"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['race', 'ffr', 'inflation', 'unrate', 'cpi', 'shiller', 'mortg', 'west', 'northeast', 'south', 'famsize', 'african', 'hispanic', 'native', 'asian', 'zlb', 'cpidurables', 'mm', 'bus12ag', 'px1disp', 'vxo', 'inflvola', 'first', 'second', 'single', 'carloan', 'inflqrtl', 'px1lag', 'dpx1', 'durlag', 'ddur', 'px1bar', 'px1mean', 'px1std', 'good', 'inflforw', 'spf', 'outside', 'good2']\n"
+     ]
     }
    ],
    "source": [
     "# Which variables are in \"old\" data but not \"new\"?\n",
     "s2 = set(new_cols)\n",
     "not_in_new = [x for x in old_cols if x not in s2]\n",
-    "not_in_new # 39 entries? "
+    "print(not_in_new)"
    ]
   }
  ],
