--- a/replication_test.ipynb
+++ b/replication_test.ipynb
@@ -429,6 +429,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ZLB  OUTSIDE\n",
+       "0.0  1          0.795018\n",
+       "1.0  1          0.103884\n",
+       "0.0  0          0.090913\n",
+       "1.0  0          0.010184\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "old_data[[\"ZLB\",\"OUTSIDE\"]].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
@@ -533,6 +558,114 @@
    ],
    "source": [
     "old_data[[\"mm\",\"INFLQRTL\"]].sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "first  second\n",
+       "0.0    1.0       0.360574\n",
+       "1.0    0.0       0.360570\n",
+       "0.0    0.0       0.275938\n",
+       "1.0    1.0       0.002919\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "old_data[[\"first\",\"second\"]].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0    87592\n",
+       "1.0      709\n",
+       "Name: first, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "old_data[old_data[\"idprev\"].notnull()][\"first\"].value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0    87591\n",
+       "0.0    67032\n",
+       "NaN     2519\n",
+       "Name: first, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "old_data[old_data[\"idprev\"].isnull()][\"first\"].value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrs = old_data.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for row in corrs.iterrows():\n",
+    "    for col in row[1]:\n",
+    "        row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-86-02d6ebbf177d>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-86-02d6ebbf177d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    row[1][abs(col)>.9 for col in row[1]]\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "row[1][abs(col)>.9 for col in row[1]]"
    ]
   }
  ],
