--- a/models.ipynb
+++ b/models.ipynb
@@ -11,6 +11,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from load_data import data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -26,7 +35,13 @@
     "import xgboost as xgb # This one?\n",
     "from sklearn.ensemble import GradientBoostingClassifier # Or this one?\n",
     "\n",
-    "#data = pd.read_csv(\"\")"
+    "from load_data import data\n",
+    "\n",
+    "# loading data from online takes ~20 seconds\n",
+    "# to speed up, save data locally and load from there:\n",
+    "# DATA_PATH = '<REPLACE>'\n",
+    "# data.to_csv(DATA_PATH)  # run this once\n",
+    "# data = pd.read_csv(DATA_PATH)  # comment out \"from load_data\" line and run this from now on"
    ]
   },
   {
@@ -59,7 +74,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -73,12 +88,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "a46f1b5a7c2f7d98a9c5b822833f2b5c313c9e905fbdd070e07917c35d21e938"
    }
   }
  },
