--- a/models.ipynb
+++ b/models.ipynb
@@ -35,7 +35,9 @@
     "import xgboost as xgb # This one?\n",
     "from sklearn.ensemble import GradientBoostingClassifier # Or this one?\n",
     "\n",
-    "from load_data import data\n",
+    "from load_data import data, categorical_vars, cts_vars, other_vars\n",
+    "# categorical_vars and cts_vars are lists of vars in each category\n",
+    "# other_vars are ID and date variables (categorical_vars + cts_vars + other_vars = all vars)\n",
     "\n",
     "# loading data from online takes ~20 seconds\n",
     "# to speed up, save data locally and load from there:\n",
