--- a/models.ipynb
+++ b/models.ipynb
@@ -11,9 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'statsmodels.miscmodels.ordinal_model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-38e5444f0cd5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmiscmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mordinal_model\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOrderedModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'statsmodels.miscmodels.ordinal_model'"
+     ]
+    }
+   ],
    "source": [
     "# Load in relevant packages\n",
     "# Will need to \"pip3 install statsmodels\", \"pip3 install xgboost\"\n",
@@ -25,16 +37,66 @@
     "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score\n",
     "import xgboost as xgb # This one?\n",
     "from sklearn.ensemble import GradientBoostingClassifier # Or this one?\n",
-    "\n",
+    "from data_utils import prep_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/drewkeller/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/header_footer.py:48: UserWarning: Cannot parse header or footer so it will be ignored\n",
+      "  warn(\"\"\"Cannot parse header or footer so it will be ignored\"\"\")\n"
+     ]
+    }
+   ],
+   "source": [
     "from load_data import data, categorical_vars, cts_vars, other_vars\n",
     "# categorical_vars and cts_vars are lists of vars in each category\n",
-    "# other_vars are ID and date variables (categorical_vars + cts_vars + other_vars = all vars)\n",
-    "\n",
+    "# other_vars are ID and date variables (categorical_vars + cts_vars + other_vars = all vars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# loading data from online takes ~20 seconds\n",
     "# to speed up, save data locally and load from there:\n",
-    "# DATA_PATH = '<REPLACE>'\n",
-    "# data.to_csv(DATA_PATH)  # run this once\n",
-    "# data = pd.read_csv(DATA_PATH)  # comment out \"from load_data\" line and run this from now on"
+    "DATA_PATH = '../paper_replication_data/new_data.csv'\n",
+    "data.to_csv(DATA_PATH)  # run this once"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/drewkeller/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3165: DtypeWarning: Columns (18,20,35,40) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(DATA_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prep_features(data)  # prep features for modeling; use regression=True for regression models"
    ]
   },
   {
