--- a/models.ipynb
+++ b/models.ipynb
@@ -13,31 +13,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'statsmodels.miscmodels.ordinal_model'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-38e5444f0cd5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmiscmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mordinal_model\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOrderedModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'statsmodels.miscmodels.ordinal_model'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load in relevant packages\n",
-    "# Will need to \"pip3 install statsmodels\", \"pip3 install xgboost\"\n",
     "\n",
     "import pandas as pd\n",
     "from statsmodels.miscmodels.ordinal_model import OrderedModel\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import tree\n",
     "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score\n",
-    "import xgboost as xgb # This one?\n",
-    "from sklearn.ensemble import GradientBoostingClassifier # Or this one?\n",
-    "from data_utils import prep_features"
+    "import xgboost as xgb\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from data_utils import prep_features\n",
+    "import numpy as np\n",
+    "from parameters import confounders"
    ]
   },
   {
@@ -49,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/drewkeller/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/header_footer.py:48: UserWarning: Cannot parse header or footer so it will be ignored\n",
+      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/openpyxl/worksheet/header_footer.py:48: UserWarning: Cannot parse header or footer so it will be ignored\n",
       "  warn(\"\"\"Cannot parse header or footer so it will be ignored\"\"\")\n"
      ]
     }
@@ -62,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,15 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/drewkeller/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3165: DtypeWarning: Columns (18,20,35,40) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     "ename": "NameError",
+     "evalue": "name 'DATA_PATH' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-6bf30d100159>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'DATA_PATH' is not defined"
      ]
     }
    ],
@@ -92,11 +84,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prep_features(data)  # prep features for modeling; use regression=True for regression models"
+    "data_regression = prep_features(data,regression=True)  # prep features for modeling; use regression=True for regression models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0-5      156454\n",
+       "5-10      45244\n",
+       "20+       27431\n",
+       "10-15     11284\n",
+       "15-20      4758\n",
+       "Name: treatment_bins, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.treatment_bins.value_counts()  # check that we have a balanced dataset"
    ]
   },
   {
@@ -105,16 +122,209 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "treatment_bins = ['treatment_bins_5-10','treatment_bins_10-15','treatment_bins_15-20','treatment_bins_20+']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 1.0    205880\n",
+       "-1.0     72235\n",
+       " 0.0     13212\n",
+       "Name: durable_purchase, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.durable_purchase.value_counts()  # check that we have a balanced dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 1.0    205880\n",
+       "-1.0     72235\n",
+       " 0.0     13212\n",
+       "Name: durable_purchase, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_regression.durable_purchase.value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.718503\n",
+      "         Iterations: 33\n",
+      "         Function evaluations: 34\n",
+      "         Gradient evaluations: 34\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/statsmodels/miscmodels/ordinal_model.py:419: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
+      "  xb = xb[:, None]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.21910995, 0.04363576, 0.7372543 ],\n",
+       "       [0.28624666, 0.04950562, 0.66424772],\n",
+       "       [0.35048146, 0.05324173, 0.59627681],\n",
+       "       ...,\n",
+       "       [0.27093783, 0.04835407, 0.6807081 ],\n",
+       "       [0.16071632, 0.03660757, 0.80267611],\n",
+       "       [0.27093783, 0.04835407, 0.6807081 ]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# First model, ordered probit-same as Bachmann et al.\n",
-    "mod_prob = OrderedModel(data['YVAR'],\n",
-    "                        data[['X1', 'X2', 'X3']],\n",
+    "mod_prob = OrderedModel(data_regression['durable_purchase'],\n",
+    "                        data_regression[confounders+treatment_bins],\n",
     "                        distr='probit')\n",
     "\n",
     "res_prob = mod_prob.fit(method='bfgs')\n",
     "res_prob.summary()\n",
     "\n",
-    "predicted = res_prob.model.predict(res_prob.params, exog=data[['X1', 'X2', 'X3']])\n",
+    "predicted = res_prob.model.predict(res_prob.params, exog=data_regression[confounders+treatment_bins])\n",
     "predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OrderedModel Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>     <td>durable_purchase</td>  <th>  Log-Likelihood:    </th> <td>-2.0932e+05</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>               <td>OrderedModel</td>    <th>  AIC:               </th>  <td>4.187e+05</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>           <td>Maximum Likelihood</td> <th>  BIC:               </th>  <td>4.187e+05</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>              <td>Wed, 30 Nov 2022</td>  <th>                     </th>      <td> </td>     \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                  <td>13:46:38</td>      <th>                     </th>      <td> </td>     \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>       <td>291327</td>       <th>                     </th>      <td> </td>     \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>           <td>291319</td>       <th>                     </th>      <td> </td>     \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>               <td>     8</td>       <th>                     </th>      <td> </td>     \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "            <td></td>              <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>fed_funds_rate</th>       <td>    0.0240</td> <td>    0.002</td> <td>    9.825</td> <td> 0.000</td> <td>    0.019</td> <td>    0.029</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>unemployment_rate</th>    <td>   -0.1541</td> <td>    0.002</td> <td>  -63.539</td> <td> 0.000</td> <td>   -0.159</td> <td>   -0.149</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>treatment_bins_5-10</th>  <td>   -0.2108</td> <td>    0.007</td> <td>  -31.149</td> <td> 0.000</td> <td>   -0.224</td> <td>   -0.198</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>treatment_bins_10-15</th> <td>   -0.3149</td> <td>    0.012</td> <td>  -25.610</td> <td> 0.000</td> <td>   -0.339</td> <td>   -0.291</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>treatment_bins_15-20</th> <td>   -0.3912</td> <td>    0.018</td> <td>  -21.300</td> <td> 0.000</td> <td>   -0.427</td> <td>   -0.355</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>treatment_bins_20+</th>   <td>   -0.3815</td> <td>    0.008</td> <td>  -47.063</td> <td> 0.000</td> <td>   -0.397</td> <td>   -0.366</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>-1.0/0.0</th>             <td>   -0.7819</td> <td>    0.003</td> <td> -252.625</td> <td> 0.000</td> <td>   -0.788</td> <td>   -0.776</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>0.0/1.0</th>              <td>   -1.9640</td> <td>    0.008</td> <td> -231.696</td> <td> 0.000</td> <td>   -1.981</td> <td>   -1.947</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                             OrderedModel Results                             \n",
+       "==============================================================================\n",
+       "Dep. Variable:       durable_purchase   Log-Likelihood:            -2.0932e+05\n",
+       "Model:                   OrderedModel   AIC:                         4.187e+05\n",
+       "Method:            Maximum Likelihood   BIC:                         4.187e+05\n",
+       "Date:                Wed, 30 Nov 2022                                         \n",
+       "Time:                        13:46:38                                         \n",
+       "No. Observations:              291327                                         \n",
+       "Df Residuals:                  291319                                         \n",
+       "Df Model:                           8                                         \n",
+       "========================================================================================\n",
+       "                           coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "----------------------------------------------------------------------------------------\n",
+       "fed_funds_rate           0.0240      0.002      9.825      0.000       0.019       0.029\n",
+       "unemployment_rate       -0.1541      0.002    -63.539      0.000      -0.159      -0.149\n",
+       "treatment_bins_5-10     -0.2108      0.007    -31.149      0.000      -0.224      -0.198\n",
+       "treatment_bins_10-15    -0.3149      0.012    -25.610      0.000      -0.339      -0.291\n",
+       "treatment_bins_15-20    -0.3912      0.018    -21.300      0.000      -0.427      -0.355\n",
+       "treatment_bins_20+      -0.3815      0.008    -47.063      0.000      -0.397      -0.366\n",
+       "-1.0/0.0                -0.7819      0.003   -252.625      0.000      -0.788      -0.776\n",
+       "0.0/1.0                 -1.9640      0.008   -231.696      0.000      -1.981      -1.947\n",
+       "========================================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_prob.summary()"
    ]
   },
   {
@@ -129,7 +339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.8.8 ('stats')",
    "language": "python",
    "name": "python3"
   },
@@ -148,7 +358,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a46f1b5a7c2f7d98a9c5b822833f2b5c313c9e905fbdd070e07917c35d21e938"
+    "hash": "6e666a3ba3648cc9e607b3cf542e9d75d4082c9e9424a59415dd75d5759d492a"
    }
   }
  },
