--- a/prepare_survey_data.ipynb
+++ b/prepare_survey_data.ipynb
@@ -2148,7 +2148,7 @@
     "# convert cts vars to numeric\n",
     "base_data[\"household_size\"] = base_data.NUMKID.astype(float) + base_data.NUMADT.astype(float)\n",
     "base_data[cts_vars] = base_data[cts_vars].astype(float)\n",
-    "base_data[\"price_change_amt_next_5yr\"] = base_data.PX5Q2.replace([98,99], np.nan)\n",
+    "base_data[\"price_change_amt_next_5yr\"] = base_data.price_change_amt_next_5yr.replace([98,99], np.nan)\n",
     "\n",
     "base_data = base_data.drop(columns=construction_vars)\n",
     "\n",
