--- a/models.ipynb
+++ b/models.ipynb
@@ -32,33 +32,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/openpyxl/worksheet/header_footer.py:48: UserWarning: Cannot parse header or footer so it will be ignored\n",
-      "  warn(\"\"\"Cannot parse header or footer so it will be ignored\"\"\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Excluding 304214 observations that did not answer 1 year price change question.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#from load_data import data, categorical_vars, cts_vars, other_vars\n",
+    "from load_data import data, categorical_vars, cts_vars, other_vars\n",
     "\n",
     "# loading data from online takes ~20 seconds\n",
     "# to speed up, save data locally and load from there:\n",
     "\n",
     "#data.to_csv(DATA_PATH,index=False)  # run this once\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['first_interview',\n",
+       " 'personal_finances_yr_ago',\n",
+       " 'price_related_yr_ago',\n",
+       " 'personal_finances_5yr_ago',\n",
+       " 'personal_finances_next_yr',\n",
+       " 'personal_finances_next_5yr',\n",
+       " 'income_change_next_yr',\n",
+       " 'real_income_expectations',\n",
+       " 'conditions_yr_ago',\n",
+       " 'conditions_next_yr',\n",
+       " 'unemployment_next_yr',\n",
+       " 'govt_policy_efficacy',\n",
+       " 'interest_rates_next_yr',\n",
+       " 'price_change_next_yr',\n",
+       " 'price_change_next_5yr',\n",
+       " 'durable_purchase',\n",
+       " 'car_purchase',\n",
+       " 'income_quintile',\n",
+       " 'region',\n",
+       " 'sex',\n",
+       " 'education',\n",
+       " 'vehicle_ownership',\n",
+       " 'treatment_pctile',\n",
+       " 'treatment_bins']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_vars"
    ]
   },
   {
@@ -689,7 +716,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('stats')",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -703,12 +730,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6e666a3ba3648cc9e607b3cf542e9d75d4082c9e9424a59415dd75d5759d492a"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
