recommented slow load

--- a/models.ipynb
+++ b/models.ipynb
@@ -52,12 +52,12 @@
     }
    ],
    "source": [
-    "from load_data import data, categorical_vars, cts_vars, other_vars\n",
+    "#from load_data import data, categorical_vars, cts_vars, other_vars\n",
     "\n",
     "# loading data from online takes ~20 seconds\n",
     "# to speed up, save data locally and load from there:\n",
     "\n",
-    "data.to_csv(DATA_PATH,index=False)  # run this once\n",
+    "#data.to_csv(DATA_PATH,index=False)  # run this once\n",
     "\n"
    ]
   },
